ingress/sample_svc.yaml
### USE ONLY WHEN YOU ARE NOT EDITING THE INGRESS SVC
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx"},"name":"ingress-nginx","namespace":"ingress-nginx"},"spec":{"externalTrafficPolicy":"Local","ports":[{"name":"http","port":80,"targetPort":"http"},{"name":"https","port":443,"targetPort":"https"}],"selector":{"app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx"},"type":"LoadBalancer"}}
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  name: ingress-nginx
  selfLink: /api/v1/namespaces/ingress-nginx/services/ingress-nginx
spec:
  externalIPs:
  - 192.168.1.70
  externalTrafficPolicy: Local
  healthCheckNodePort: 32211
  ports:
  - name: http
    nodePort: 30356
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 32492
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
